# opengl-glfw-starter

./: CMakeLists.txt  README.md
include/: base.hpp  shader.hpp  util.hpp  vao.hpp  vbo.hpp  window.hpp
shaders/: triangle.fs  triangle.vs
source/: main.cpp
